# Chatbot-ACS

./: .dockerignore  .gitignore  Dockerfile  another_example.py  browser_headers.json  docker-compose.yml  dump.rdb  evaluare.csv  get_acs_structure.py  ingest_orare.py  my_headers.json  pyproject.toml  something.py  test_pipeline.py  thesis_ro.tex
.github/workflows/: deploy.yml
sandbox/: chatbot.py  chatbot_page.py  constants.py  conversation.py  conversation_context.py  debug_output.json  debug_output.txt  debug_query.py  delete_chatbot_session.py  entry_point.py  forgot_password_page.py  load_conversations.py  login.html  login_page.py  meeting_requests.py  prerequities.py  register_page.py  render_chat_page.py  render_conversations.py  render_sidebar.py  set_initial_session.py  settings_page.py  show_sources_data.py  user_session.py  utils.py  validate_models.py
src/DB/: change_password.py  conversation_store.py  load_conversation_messages.py  load_user_conversations.py  login_user.py  register_user.py  table_client.py  update_conversations.py  verify_user.py
src/HttpAdapter/: http_adapter.py
src/HttpHeader/: browser_header.py  browser_headers.json  format_header_to_request_header.py  generate_browser_header_agent.py  tests.py  utils.py
src/UI/: constants.py  conversation.py  conversation_context.py  cookie_session.py  delete_chatbot_session.py  entry_point.py  forgot_password_page.py  login_page.py  prerequities.py  register_page.py  render_chat_page.py  render_conversations.py  render_sidebar.py  set_initial_session.py  user_session.py  utils.py  validate_class.py
src/User_Agents/: fetch_user_agents.py  utils.py
src/acs_spider/: items.py  middlewares.py  output.jsonl  run.py  settings.py  ssl_context.py
src/ai_prompts/: chatbot_responder.py  constants.py  conversation_summarizer.py  error_handlers.py  hyde.py  keywords_extractor.py  query_rewriter.py  utils.py
src/azure/: error_handlers.py
src/categorization/: categories.py  constants.py  load_encode.py  matcher.py  utils.py
src/chatbot/: category_loader.py  scoring.py  session.py  url_loader.py  user_query.py
src/classifier/: topic_model.py
src/content_verification/: docs_writer.py  files_verification.py
src/crawl_settings/: chatbot_settings.py  constants.py  general_settings.py
src/huggingface/: utils.py
src/parsers/: constants.py  entries.py  error_handlers.py  metadata.py  utils.py
src/scraper/: __main__.py  constants.py  header_builder.py  http_client.py  retry.py  scraper.py  ua_rotator.py  ua_scraper.py
src/secrets/: get_secrets_from_kv.py  kv_instance.py
src/spider/: constants.py  content_utils.py  error_handlers.py  items.py  link_duplicates.py  link_utils.py  middlewares.py  output.json  pipelines.py  redis_utils.py  run.py  settings.py  ssl_context.py  utils.py  websites.py
src/token_scraper/: __main__.py  browser_versions.py  fake_ua.py  header_builder.py  request_header_builder.py  ua_rotator.py  ua_scraper.py
src/user_agent/: browser_versions.py  (+3 more)
tests/: test_scraper.py
(+68 files in other folders)
