[project]
name = "chatbot-acs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapy>=2.14.1",
    "scrapy-redis>=0.7.3",
    "redis>=5.0.0",
    "ua-generator>=2.0.21",
    "python-dotenv>=1.2.1",
    "trafilatura>=2.0.0",
    "bs4>=0.0.2",
    "langchain-chroma>=1.1.0",
    "docling>=2.91.0",
    "langchain-docling>=2.0.0",
    "langchain>=1.2.15",
    "xlrd>=2.0.1",
    "markdownify>=1.2.2",
    "datasketch>=1.6.5",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "langchain-anthropic>=1.4.3",
]
