[project]
name = "chatbot-acs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapy>=2.14.1",
    "scrapy-redis>=0.7.3",
    "redis>=5.0.0",
    "ua-generator>=2.0.21",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-data-tables>=12.6.0",
    "trafilatura>=2.0.0",
    "bs4>=0.0.2",
    "langchain-chroma>=1.1.0",
    "docling>=2.91.0",
    "langchain-docling>=2.0.0",
    "langchain>=1.2.15",
    "xlrd>=2.0.1",
    "markdownify>=1.2.2",
    "datasketch>=1.6.5",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.4.1",
    "transformers>=4.41.0,<5.0.0",
    "streamlit>=1.57.0",
    "langchain-anthropic>=1.4.3",
    "yake>=0.7.3",
    "langdetect>=1.0.9",
    "spacy>=3.8.13",
    "streamlit-autorefresh>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyJWT>=2.9.0",
    "python-multipart>=0.0.12",
    "azure-storage-blob>=12.30.0",
]
